Homework/FinalProject/css/mobile.css
@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i');
@import url('https://fonts.googleapis.com/css?family=Cabin+Sketch:700');

@viewport{
    width: auto;
    height: auto;
}

html, body{
    width: 100%;
    height: 100%;
}

body{
    margin: 0 auto;
    font-family: 'IBM Plex Sans Condensed', sans-serif;
    color: white;
}

p{
    margin: 0 auto;
}

h1, h2, h3, h4, h5{
    margin: 0;
}

img{
    width: 100%;
    height: 100%
}

/****************** NAVIGATION PANE *************/
header{
    position: fixed;
    display: block;
    width: 100%;
    height: auto;
    top: 0;
    margin: 0 auto;
    padding: 1% 0;
    z-index: 999;
    font-weight: 300;
    font-size: 1.3em;
    border-bottom: solid;
    background-color: pink;
}

nav{
    max-width: 100%;
    text-align: center;

}

nav ul{
    list-style: none;
    margin: 0 auto;
    padding: 0;
}


.desktopNav{
    display: block;
    height: auto;
}

.desktopNav ul{
    margin: 0 auto;
    position: sticky;
    right: 0;
    float: right;
    width: 40%;
    margin-right: 5%
}

.desktopNav ul li{
    display: inline-block;
    margin-right: 3%;
    padding: 1%;
}


#navButton{
    background-color: pink;
    padding: 10px;
    height: 6%;
    display: none;
    font-weight: 200;
}









/****************** FIRST PAGE WITH SLIDES ******************/
.pinSlides{
    width: 100%;
    height: 100%;
    overflow: hidden;
    -webkit-perspective: 1000;
    perspective: 1000;
}
#slideContainer {
    width: 200%; /* to contain 4 panels, each with 100% of window width */
    height: 100%;
    top: 0 !important;
}
.panel {
    height: 100%;
    width: 50%; /* relative to parent -> 25% of 400% = 100% of window width */
    left: 0 !important;
    float: left;
}

#p1{
    background-color: rgb(89, 212, 219);
    margin-left:0;
}

#p2{
    background-color: brown;
    left: 0;
    right: 0;
}







/****************** OTHER PAGES ******************/
.fullPage{
    width: 100%;
    min-height: 100%;
    margin: 0 auto;
    top: 30.5px !important;
    left: -5 !important;
    background-color: white;
    overflow-y: scroll;
}

.content{
    margin-top: 10%;
    margin-bottom: 50%;
    margin-left: 5%;
    margin-right: 3%;
    text-align: center;
}

#home{
    margin-bottom: 50%;
}
    #home #p1 .content{
        margin-top: 15%;
        background-color: rgb(89, 212, 219);
        color: white;
    }
    #home #p1 .content h1{
        font-family: 'Cabin Sketch', cursive;
    }
    #home #p1 .content h4{
        font-weight: normal;
        font-size: 4em;
    }


#p2{
    display: block;
    margin-bottom: 500px;
    background-color: pink;
}
    #p2 .content{
        position: relative;
        background-color: pink;
    }
    #p2 .content p{
        display: inline-block;
        font-size: 2vmax;
        position: relative;
        margin-left: 2%;
        top: 2vh;
        left: 5vw;
        padding: 2%;
        width: 50%;
        height: 100%;
    }
    #meImg{
        display: inline-block;
        height: 15%;
        position: relative;
        right: 10vw;
        top: 10vh;
        margin-left: 10%;
    }
    #meImg img{
        border-radius: 100%;
        border: solid;
    }



#experience{
    margin-top: 4%;
    padding-top: 1%;
    margin-bottom: 100px;
    background-color: rgb(89, 212, 219);
}
    #exSectionContents{
        display: grid;
        grid-template-columns: repeat(auto-fit, 48%);
        grid-column-gap: 2%;
    }

    .job{
        background-color: white;
        color: rgb(247, 192, 103);
        margin-top: 3%;
        border-radius: 10px;
    }
        .job ul{
            margin: 3%;
        }
        .job ul li{
            text-align: left;
        }
    .titleInfo{
        padding: 3%;
        background-color: rgb(247, 192, 103);
        color:white;
        border-top-right-radius: 10px;
        border-top-left-radius: 10px;
    }

    .jobTitle{
        text-decoration: underline;
    }



#skills{
    margin-top: 4%;
    padding-top: 1%;
    background-color: pink;
}

#projects{
    margin-top: 4%;
    white-space: nowrap;
    overflow: auto;
    overflow-y: hidden;
    background-color: rgb(89, 212, 219);
}




/***************** Panel & Projects area ****************/
.pinProjectSlides{
    width: 100%;
    height: 100%;
    overflow: hidden;
    -webkit-perspective: 1000;
    perspective: 1000;
}

#projects100{
    width: 100%;
    height: 100%;
}

#myProjectSlideContainer {
    width: 300%; /* to contain 4 panels, each with 100% of window width */
    height: 100%;
    top: 0 !important;
}

.panelProjects{
    display: inline-block;
    height: 100%;
    width: calc(100%/3); /* relative to parent -> 25% of 400% = 100% of window width */
    margin: 0;
    left: 0 !important;
    float: left;
}


#myProjects{
    background-color: rgb(89, 212, 219);
}
    #myProjects .content{
        margin-top:
    }
#webdesignProjects{
    background-color: pink;
    overflow-y: scroll;
}

.content{
    margin-top: 7%;
    padding-top: 1%;
    padding-bottom: 1%;
}

    #webdesignProjects #gridProjectContent{
        margin-top: 5%;
        display: grid;
        grid-template-columns: repeat(auto-fill, 250px);
        grid-template-rows: repeat(auto, 300px);
        grid-column-gap: 5px;
        grid-row-gap: 5px;
        margin-bottom: 5%;
        border-bottom-left-radius: 5px;
        border-bottom-right-radius: 20px;
        padding-bottom: 1%;
    }
    #webdesignProjects.content{
        margin-right: 2%;
    }

    .thumbnail{
        width: 250px;
        height: 250px;
        background-color: white;
        border-radius: 10px;
    }
    .thumbnail p{
        margin-top: 10%;
        color: rgb(89, 212, 219);

    }

    .thumbnail.active {
        background-color: grey;
    }

    .thumbnail .imgHolder{
        background-color: white;
        margin: 2% auto;
        max-width: 95%;
        height: 70%;
        border-radius: 10px;
    }
        #resumeOrange{
            background-color: rgb(247, 216, 143);
        }
        #upupBeige{
            background-color: beige;
        }

        .thumbnail img{
            max-width: 100%;
            max-height: 70%;
            align-items: center;
        }
            #noCssResume{
                margin-top: 15%;
                max-height: 50%;
            }
            #cssResume{
                margin-top: 15%;
                max-height: 50%;
            }
            #upup{
                margin-top: 15%;
                max-height: 50%;
            }
            #howTo{
                margin-top: 27%;
                max-height: 20%;
            }
            #plugin{
                border-radius: 10px;
                max-height: 100%;
            }




#compSciProjects{
    background-color:pink;
}


/**************LETTIERING JS STUFF****************/
#greeting{
    font-size: 8em;
}



@media only screen and (min-width: 0px) and (max-width: 700px){
    #greeting{
        font-size: 7em;
    }

    #p2 .content p{
        top: 10vh;
        margin: 0 auto;
        margin-left: -10%;
    }
    #meImg{
        right: 5vw;
    }

}

@media only screen and (min-width:960px) and (max-width: 1159px){
    .desktopNav ul{
        width: 50%;
    }
}

@media only screen and (min-width:860px) and (max-width: 960px){
    .desktopNav ul{
        width: 60%;
    }
}


@media only screen and (min-width:0px) and (max-width: 860px){
    #navButton{
        background-color: pink;
        display: block;
    }
    .desktopNav{
        display: none;
    }
    .mobileNav{
        width: 100%;
        background-color: rgb(172, 137, 193);
    }

    .mobileNav ul{
        margin: 0 auto !important;
    }
}

